yoo-website/versioned_docs/version-2.2.x/005-api/YooAsset.Editor/ReportSummary.md
---
title: Class ReportSummary
sidebar_label: ReportSummary
---
# Class ReportSummary


###### **Assembly**: YooAsset.Editor.dll

```csharp title="Declaration"
[Serializable]
public class ReportSummary
```
## Fields
### YooVersion
YooAsset版本

```csharp title="Declaration"
public string YooVersion
```
### UnityVersion
引擎版本

```csharp title="Declaration"
public string UnityVersion
```
### BuildDate
构建时间

```csharp title="Declaration"
public string BuildDate
```
### BuildSeconds
构建耗时（单位：秒）

```csharp title="Declaration"
public int BuildSeconds
```
### BuildTarget
构建平台

```csharp title="Declaration"
public BuildTarget BuildTarget
```
### BuildPipeline
构建管线

```csharp title="Declaration"
public string BuildPipeline
```
### BuildBundleType
构建的资源包类型

```csharp title="Declaration"
public int BuildBundleType
```
### BuildPackageName
构建包裹名称

```csharp title="Declaration"
public string BuildPackageName
```
### BuildPackageVersion
构建包裹版本

```csharp title="Declaration"
public string BuildPackageVersion
```
### BuildPackageNote
构建包裹备注

```csharp title="Declaration"
public string BuildPackageNote
```
### UniqueBundleName


```csharp title="Declaration"
public bool UniqueBundleName
```
### EnableAddressable


```csharp title="Declaration"
public bool EnableAddressable
```
### LocationToLower


```csharp title="Declaration"
public bool LocationToLower
```
### IncludeAssetGUID


```csharp title="Declaration"
public bool IncludeAssetGUID
```
### AutoCollectShaders


```csharp title="Declaration"
public bool AutoCollectShaders
```
### IgnoreRuleName


```csharp title="Declaration"
public string IgnoreRuleName
```
### ClearBuildCacheFiles


```csharp title="Declaration"
public bool ClearBuildCacheFiles
```
### UseAssetDependencyDB


```csharp title="Declaration"
public bool UseAssetDependencyDB
```
### EnableSharePackRule


```csharp title="Declaration"
public bool EnableSharePackRule
```
### EncryptionClassName


```csharp title="Declaration"
public string EncryptionClassName
```
### FileNameStyle


```csharp title="Declaration"
public EFileNameStyle FileNameStyle
```
### CompressOption


```csharp title="Declaration"
public ECompressOption CompressOption
```
### DisableWriteTypeTree


```csharp title="Declaration"
public bool DisableWriteTypeTree
```
### IgnoreTypeTreeChanges


```csharp title="Declaration"
public bool IgnoreTypeTreeChanges
```
### AssetFileTotalCount


```csharp title="Declaration"
public int AssetFileTotalCount
```
### MainAssetTotalCount


```csharp title="Declaration"
public int MainAssetTotalCount
```
### AllBundleTotalCount


```csharp title="Declaration"
public int AllBundleTotalCount
```
### AllBundleTotalSize


```csharp title="Declaration"
public long AllBundleTotalSize
```
### EncryptedBundleTotalCount


```csharp title="Declaration"
public int EncryptedBundleTotalCount
```
### EncryptedBundleTotalSize


```csharp title="Declaration"
public long EncryptedBundleTotalSize
```
