yoo-website/versioned_docs/version-2.3.x/005-api/YooAsset.Editor/ReportSummary.md
---
title: Class ReportSummary
sidebar_label: ReportSummary
---
# Class ReportSummary


###### **Assembly**: YooAsset.Editor.dll
###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L8)
```csharp title="Declaration"
[Serializable]
public class ReportSummary
```
## Fields
### YooVersion
YooAsset版本
###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L14)
```csharp title="Declaration"
public string YooVersion
```
### UnityVersion
引擎版本
###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L19)
```csharp title="Declaration"
public string UnityVersion
```
### BuildDate
构建时间
###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L24)
```csharp title="Declaration"
public string BuildDate
```
### BuildSeconds
构建耗时（单位：秒）
###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L29)
```csharp title="Declaration"
public int BuildSeconds
```
### BuildTarget
构建平台
###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L34)
```csharp title="Declaration"
public BuildTarget BuildTarget
```
### BuildPipeline
构建管线
###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L39)
```csharp title="Declaration"
public string BuildPipeline
```
### BuildBundleType
构建的资源包类型
###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L44)
```csharp title="Declaration"
public int BuildBundleType
```
### BuildPackageName
构建包裹名称
###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L49)
```csharp title="Declaration"
public string BuildPackageName
```
### BuildPackageVersion
构建包裹版本
###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L54)
```csharp title="Declaration"
public string BuildPackageVersion
```
### BuildPackageNote
构建包裹备注
###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L59)
```csharp title="Declaration"
public string BuildPackageNote
```
### UniqueBundleName

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L62)
```csharp title="Declaration"
public bool UniqueBundleName
```
### EnableAddressable

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L63)
```csharp title="Declaration"
public bool EnableAddressable
```
### LocationToLower

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L64)
```csharp title="Declaration"
public bool LocationToLower
```
### IncludeAssetGUID

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L65)
```csharp title="Declaration"
public bool IncludeAssetGUID
```
### AutoCollectShaders

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L66)
```csharp title="Declaration"
public bool AutoCollectShaders
```
### IgnoreRuleName

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L67)
```csharp title="Declaration"
public string IgnoreRuleName
```
### ClearBuildCacheFiles

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L70)
```csharp title="Declaration"
public bool ClearBuildCacheFiles
```
### UseAssetDependencyDB

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L71)
```csharp title="Declaration"
public bool UseAssetDependencyDB
```
### EnableSharePackRule

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L72)
```csharp title="Declaration"
public bool EnableSharePackRule
```
### SingleReferencedPackAlone

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L73)
```csharp title="Declaration"
public bool SingleReferencedPackAlone
```
### EncryptionClassName

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L74)
```csharp title="Declaration"
public string EncryptionClassName
```
### FileNameStyle

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L75)
```csharp title="Declaration"
public EFileNameStyle FileNameStyle
```
### CompressOption

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L78)
```csharp title="Declaration"
public ECompressOption CompressOption
```
### DisableWriteTypeTree

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L79)
```csharp title="Declaration"
public bool DisableWriteTypeTree
```
### IgnoreTypeTreeChanges

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L80)
```csharp title="Declaration"
public bool IgnoreTypeTreeChanges
```
### WriteLinkXML

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L81)
```csharp title="Declaration"
public bool WriteLinkXML
```
### CacheServerHost

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L82)
```csharp title="Declaration"
public string CacheServerHost
```
### CacheServerPort

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L83)
```csharp title="Declaration"
public int CacheServerPort
```
### BuiltinShadersBundleName

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L84)
```csharp title="Declaration"
public string BuiltinShadersBundleName
```
### MonoScriptsBundleName

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L85)
```csharp title="Declaration"
public string MonoScriptsBundleName
```
### AssetFileTotalCount

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L88)
```csharp title="Declaration"
public int AssetFileTotalCount
```
### MainAssetTotalCount

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L89)
```csharp title="Declaration"
public int MainAssetTotalCount
```
### AllBundleTotalCount

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L90)
```csharp title="Declaration"
public int AllBundleTotalCount
```
### AllBundleTotalSize

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L91)
```csharp title="Declaration"
public long AllBundleTotalSize
```
### EncryptedBundleTotalCount

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L92)
```csharp title="Declaration"
public int EncryptedBundleTotalCount
```
### EncryptedBundleTotalSize

###### [View Source](https://github.com/tuyoogame/YooAsset-Samples.git/blob/main/Assets/YooAsset/Editor/AssetBundleReporter/ReportSummary.cs#L93)
```csharp title="Declaration"
public long EncryptedBundleTotalSize
```
